3

* Read check permission

2

* Drop presence and network

1

* Initial Version